Activities set up with links between

--- a/res/layout/activity_view_reminders.xml
+++ b/res/layout/activity_view_reminders.xml
@@ -8,31 +8,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ReminderActivity" >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:gravity="center"
-        android:text="PayBaq"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:text="Send Reminder" />
-
-    <Button
+    <EditText
         android:id="@+id/reminder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/send"
-        android:layout_below="@+id/send"
-        android:layout_marginTop="60dp"
-        android:text="View Reminder" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:ems="10" >
+
+        <requestFocus />
+    </EditText>
 
 </RelativeLayout>
