--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -19,8 +19,8 @@
 
     <Button
         android:id="@+id/send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
@@ -28,11 +28,11 @@
 
     <Button
         android:id="@+id/reminder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/send"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_alignLeft="@+id/send"
         android:layout_below="@+id/send"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="38dp"
         android:text="View Reminder" />
 
 </RelativeLayout>
