--- a/res/layout/activity_select.xml
+++ b/res/layout/activity_select.xml
@@ -3,7 +3,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
         
-        <TextView android:id="@+id/output"
+        <TextView android:id="@+id/selectOutput"
                 android:background="#758AA7" 
                 android:layout_height="wrap_content"
                 android:padding="1px"
