--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -1,38 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/pqgray"
+    android:orientation="vertical"
     tools:context=".ReminderActivity" >
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/textViewRemind"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:gravity="center"
-        android:text="PayBaq"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_alignParentTop="true"
+        android:gravity="left"
+        android:text="Someone owes you money."
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white"
+        android:textSize="45sp" />
 
     <Button
         android:id="@+id/send"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:text="Send Reminder" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/silver"
+        android:gravity="left"
+        android:text="Remind them."
+        android:textColor="@color/white"
+        android:textSize="45sp" />
+
+    <TextView
+        android:id="@+id/textViewOwe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/pqgray"
+        android:ems="10"
+        android:paddingTop="10dp"
+        android:text="What do you owe other people?"
+        android:textColor="@color/pqblue"
+        android:textSize="45sp" >
+    </TextView>
 
     <Button
         android:id="@+id/reminder"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_alignLeft="@+id/send"
-        android:layout_below="@+id/send"
-        android:layout_marginTop="38dp"
-        android:text="View Reminder" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:background="@color/silver"
+        android:gravity="left"
+        android:text="Check now."
+        android:textColor="@color/pqblue"
+        android:textSize="45sp" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="right"
+        android:src="@drawable/paybaq_logo" />
+
+</LinearLayout>
