--- a/res/layout/activity_view_reminders.xml
+++ b/res/layout/activity_view_reminders.xml
@@ -1,14 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="@color/pqgray" >
         
         <TextView android:id="@+id/reminderOutput"
-                android:background="#758AA7" 
+                android:background="@color/silver" 
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:padding="1px"
-                android:textColor="#ffffff"
-                android:text="Click : " android:layout_width="fill_parent" />
+                android:textColor="@color/pqblue"
+                android:textSize="35dp"
+                android:text="Debts owed to you"  />
         
         <ListView
             android:id="@android:id/list"
