--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,7 +4,7 @@
 	 <color name="yellow">#FFFF00</color>
 	 <color name="fuchsia">#FF00FF</color>
 	 <color name="red">#FF0000</color>
-	 <color name="silver">#C0C0C0</color>
+	 <color name="silver">#909090</color>
 	 <color name="gray">#808080</color>
 	 <color name="olive">#808000</color>
 	 <color name="purple">#800080</color>
@@ -17,6 +17,6 @@
 	 <color name="navy">#000080</color>
 	 <color name="black">#000000</color>
 	 
-	 <color name="pqblue">#10A1AA</color>
-	 <color name="pqgray">#B0B0B0</color>
+	 <color name="pqblue">#33b5e5</color>
+	 <color name="pqgray">#808080</color>
 </resources>
