--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/pqblue</item> 
         <item name="android:textSize">40sp</item> 
-        <item name="android:textColorHint">@color/blue</item>
+        <item name="android:textColorHint">@color/gray</item>
         <item name="android:background">@color/silver</item>
         <item name="android:singleLine">true</item>
     </style>
