remove from data list

--- a/res/layout/debtitem.xml
+++ b/res/layout/debtitem.xml
@@ -25,7 +25,7 @@
             android:text="Paid?" />
 
         <Button
-            android:id="@+id/moreReminder"
+            android:id="@+id/buttonReminder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
