--- a/res/layout/activity_view_reminders.xml
+++ b/res/layout/activity_view_reminders.xml
@@ -15,8 +15,12 @@
         
         <ListView
             android:id="@android:id/list"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:divider="@color/pqblue"
+            android:dividerHeight="3dp"
+            android:padding="5dp" >
+
         </ListView>
     
     </LinearLayout> 
