--- a/res/layout/debtitem.xml
+++ b/res/layout/debtitem.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_marginTop="10dp"
     android:background="@color/pqgray"
     android:orientation="vertical" >
  
     <TextView
         android:id="@+id/textInfo"
         style="@style/textview"
-        android:textSize="25sp"
+        android:textSize="22sp"
         android:text="" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp" >
 
         <Button
             android:id="@+id/buttonPaid"
@@ -31,10 +34,10 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@+id/buttonPaid"
-   			android:background="@color/silver"
-    		android:textColor="@color/white"
-            android:textSize="25sp"
-            android:text="Another reminder?" />
+            android:background="@color/silver"
+            android:text="Another reminder?"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
     </RelativeLayout>
     
