--- a/res/layout/debtitem.xml
+++ b/res/layout/debtitem.xml
@@ -22,10 +22,10 @@
             android:id="@+id/buttonPaid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-    		android:background="@color/silver"
     		android:textColor="@color/white"
             android:textSize="25sp"
-            android:text="Paid?" />
+            android:text="Paid?"
+            style="@style/customButton" />
 
         <Button
             android:id="@+id/buttonReminder"
@@ -34,10 +34,10 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="20dp"
             android:layout_toRightOf="@+id/buttonPaid"
-            android:background="@color/silver"
             android:text="Another reminder?"
             android:textColor="@color/white"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            style="@style/customButton" />
 
     </RelativeLayout>
     
