--- a/res/layout/activity_message.xml
+++ b/res/layout/activity_message.xml
@@ -59,10 +59,13 @@
     
     <Button
         android:id="@+id/submit"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editWhy"
         android:layout_marginTop="40dp"
-        android:text="Submit" />
+        android:text="Submit"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        style="@style/customButton" />
 
 </RelativeLayout>
