--- a/res/layout/activity_start.xml
+++ b/res/layout/activity_start.xml
@@ -62,4 +62,14 @@
         android:layout_below="@+id/reminder"
         android:src="@drawable/paybaq_logo" />
 
+    <Button
+        android:id="@+id/bEditAccount"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginBottom="12dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/gear" />
+
 </RelativeLayout>
